--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/material-ui": "^0.21.14",
     "axios": "0.23.0",
     "bootstrap": "^5.3.1",
     "html-to-react": "^1.6.0",
