--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.1",
     "html-to-react": "^1.6.0",
     "react": "^17.0.2",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-quill": "^1.3.5",
     "react-router-dom": "5.3.0",
