--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "8.0.2",
     "sass": "1.42.1",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
