--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@mui/x-data-grid": "^6.18.1",
+    "@mui/x-date-pickers": "^6.18.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/material-ui": "^0.21.14",
     "axios": "0.23.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "html-to-react": "^1.6.0",
     "react": "^17.0.2",
     "react-avatar-edit": "^1.2.0",
