--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-phone-app",
   "version": "0.1.0",
+  "homepage": "http://DoBaKien.github.io/Vinh",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
